2012-08-03  Yasumasa Suenaga  <suenaga.yasumasa@lab.ntt.co.jp>

	* tapset/jstack.stp.in (NarrowOopStruct): New global.
	(hotspot.vm_init_end): Initialize NarrowOopStruct.
	(hotspot.vm_shutdown): Delete NarrowOopStruct for pid.
	(jstack_call): Use NarrowOopStruct to calculate methodOopKlass.

2012-07-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	(download-openjdk): Fix use of dead HOTSPOT_SHA256SUM
	in downloading block.

2012-07-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	(OPENJDK_VERSION): Bump to b20.
	(CORBA_CHANGESET): Update to IcedTea7 forest head.
	(HOTSPOT_CHANGESET): Removed.
	(JAXP_CHANGESET): Update to IcedTea7 forest head.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(HOTSPOT_SHA256SUM): Removed.
	(JAXP_SHA256SUM): Update to IcedTea7 forest head.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* hotspot.map:
	Update changesets and checksums for default
	& zero HotSpot.
	* patches/boot/ecj-diamond.patch: Add new cases
	in CORBA, com.sun.beans.TypeResolver and
	File{Input,Output}Stream.  Remove dead FileDescriptor
	cases.
	* patches/boot/ecj-trywithresources.patch:
	Remove dead FileDescriptor case.

2012-07-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	(JDK_CHANGESET): Temporarily revert to u6-b16.
	(JDK_SHA256SUM): Likewise.
	(HS_SHA256SUM): Always set from hotspot.map
	(HS_CHANGESET): Likewise.
	(HS_URL): LIkewise.
	(ICEDTEA_PATCHES): Add additional patches for HotSpot zero.
	(ICEDTEA_BOOT_PATCHES): Use different hotspot-jdk-dependency
	patch dependent on version of HotSpot in use.
	(download-openjdk): Echo HotSpot build being used.
	* acinclude.m4:
	(IT_ENABLE_ZERO_BUILD): Use AC_DEFUN_ONCE.
	(IT_WITH_HOTSPOT_BUILD): Make default "zero" if Zero is enabled.
	* hotspot.map: